assert(worker_i < _length) failed: Worker 15 is greater than max: 11 at ReferenceProcessorPhaseTimes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 11
    • Affects Version/s: None
    • Component/s: hotspot
    • gc
    • b17

        When ParallelRefProcEnabled=true, ParallelGC and CMS faces assertion failure because an array to save time information is set smaller than actual use case. This array should be set to maximum available size.

              Assignee:
              Sangheon Kim (Inactive)
              Reporter:
              Sangheon Kim (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: